--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<h1>Hola</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contenido HTML en Texto</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        pre {
+            background-color: #f4f4f4;
+            padding: 15px;
+            border-radius: 5px;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+    </style>
+</head>
+<body>
+    <h1>Contenido HTML en Formato de Texto</h1>
+    <input type="text" id="url" placeholder="Introduce una URL" style="width: 80%;">
+    <button onclick="obtenerContenido()">Obtener Contenido</button>
+    <div id="contenido" style="margin-top: 20px;">
+        <pre id="html-content"></pre>
+    </div>
+
+    <script>
+        function obtenerContenido() {
+            const url = document.getElementById("url").value;
+            fetch("/obtener_html", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ url })
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("html-content").innerText = data.html;
+            })
+            .catch(error => console.error("Error:", error));
+        }
+    </script>
+</body>
+</html>
